<resources>
    <string name="app_name">IGREEN</string>
    <string name="tab_main">IGREEN</string>
    <string name="tab_mall">材料</string>
    <string name="tab_mine">我的</string>
    <string name="zhineng">智能</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <!--日历-->
    <string name="date_choose">选择日期</string>
    <!--我的-->
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="all_dev">全部设备</string>
    <string name="personal_info">个人资料</string>
    <string name="avatar">头像</string>
    <string name="accout">账号</string>
    <string name="nick_name">昵称</string>
    <string name="email">邮箱</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="bind_email">关联邮箱</string>
    <string name="bind_phone">关联号码</string>
    <string name="exit">注销</string>
    <string name="nickname_modify">修改昵称</string>
    <string name="nickname_hint">请填写昵称</string>
    <string name="verify_hint">请输入验证码</string>
    <string name="email_hint2">请输入新的邮箱地址</string>
    <string name="email_hint3">请再次输入新的邮箱地址</string>
    <string name="phone_hint2">请输入新的手机号码</string>
    <string name="phone_hint3">请再次输入新的手机号码</string>
    <string name="pwd_modify">修改密码</string>
    <string name="email_modify">修改绑定邮箱</string>
    <string name="email_phone">修改绑定号码</string>
    <string name="phone_email_modify">手机号码/邮箱地址</string>
    <string name="auto_update">自动检测更新</string>
    <string name="version">当前版本号</string>

    <!--消息-->
    <string name="message">消息中心</string>
    <string name="msg_sys">系统消息</string>
    <string name="msg_error">故障消息</string>
    <string name="msg_share">共享消息</string>
    <string name="msg_internal">内部消息</string>
    <string name="delete">删除</string>
    <!--智能锁-->
    <string name="text_switch">开关</string>
    <string name="title_lock">智能琐</string>
    <string name="title_more">更多设置</string>
    <string name="more_derection">使用说明</string>
    <string name="more_record">使用记录</string>
    <string name="more_share">共享设置</string>
    <string name="more_lock_auto">自动上琐</string>
    <string name="more_lock_low">低电量自动开琐</string>
    <!--智能灯-->
    <string name="title_lamp">智能灯</string>
    <!--智能桌-->
    <string name="title_desk">智能桌</string>
    <string name="coulometry">电量统计</string>
    <string name="sitdowntip">久坐提醒</string>
    <string name="tip_time">点击设置时间</string>
    <string name="title_dialog_sitdown">自定义提醒时间</string>
    <string name="title_wifi">输入Wi-Fi密码</string>
    <string name="title_dialog_sitdown2">自定义设置</string>
    <string name="tip2_time">请填写提醒时间</string>
    <string name="hint_name_desk">请填写自定义名称</string>
    <string name="hint_height_desk">请填写自定义高度</string>
    <string name="scan_code">请将取景框对准二维码，\n轻触屏幕以对焦。</string>
    <string name="scan_permission">未取得您的相机使用权限，此功能无法使用。请前往应用权限设置打开权限。</string>
    <string name="bluetooth_permission">当前手机蓝牙关闭，是否打开以扫描附近蓝牙设备？</string>
    <string name="device_is_used">当前设备正在被其他用户使用，请联\n系管理员</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
