<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <include layout="@layout/header"/>
    <TextView
        android:id="@+id/tv_use_direct_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/more_derection"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white"/>
    <TextView
        android:id="@+id/tv_use_record_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/more_record"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/more_share"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/switch_text_select2"
            android:text="@string/more_lock_auto"
            android:paddingLeft="20dp"
            android:theme="@style/MySwitch"
            android:checked="true"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@mipmap/divider_white"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/switch_text_select2"
            android:text="@string/more_lock_low"
            android:paddingLeft="20dp"
            android:theme="@style/MySwitch"
            android:paddingRight="20dp"
            android:checked="false"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@mipmap/divider_white"/>
    </LinearLayout>
</LinearLayout>
