<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/title_dialog_sitdown"
        android:padding="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_edittext_bk"
        android:padding="10dp">
        <EditText
            android:id="@+id/et_time_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:hint="@string/tip2_time"
            android:background="@null"/>
        <TextView
            android:id="@+id/tv_unit_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="h"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/btn_cancle_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/gray_text"
            android:text="@string/cancle"
            android:padding="15dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/btn_confirm_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/confirm"
            android:padding="15dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>
