<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/title_dialog_sitdown2"
        android:padding="15dp"/>
    <GridView
        android:id="@+id/grid_desk_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:scrollbars="none"
        android:listSelector="@android:color/transparent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:verticalSpacing="10dp"
        android:choiceMode="singleChoice"/>
    <EditText
        android:id="@+id/et_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:maxLength="8"
        android:singleLine="true"
        android:textColor="@color/black"
        android:hint="@string/hint_name_desk"
        android:background="@drawable/shape_edittext_bk"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_edittext_bk"
        android:padding="10dp">
        <EditText
            android:id="@+id/et_height_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:singleLine="true"
            android:maxLength="3"
            android:textColor="@color/black"
            android:hint="@string/hint_height_desk"
            android:inputType="number"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="H"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/btn_cancle_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/gray_text"
            android:text="@string/cancle"
            android:padding="15dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/btn_confirm_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/confirm"
            android:padding="15dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>
