<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_phone_modify"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/phone_email_modify"
                    android:paddingTop="15dp"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_get_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/shape_stroke_green"
                    android:text="获取验证码"
                    android:textColor="@color/switch_text_select6"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_divider_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/selector_divider" />
            <com.zt.yavon.widget.CustomEditText
                android:id="@+id/et_verify_modify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/verify_hint"
                android:layout_marginTop="20dp"
                app:drawablePadding="5dp"
                app:textSize="14sp" />
            <com.zt.yavon.widget.CustomEditText
                android:id="@+id/et_email_modify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/email_hint2"
                android:layout_marginTop="20dp"
                app:drawablePadding="5dp"
                app:textSize="14sp" />
            <com.zt.yavon.widget.CustomEditText
                android:id="@+id/et_email2_modify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:customHint="@string/email_hint3"
                android:layout_marginTop="20dp"
                app:drawablePadding="5dp"
                app:textSize="14sp" />
            <TextView
                android:id="@+id/btn_confirm_modify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:background="@drawable/shape_stroke_green"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/confirm"
                android:textColor="@color/mainGreen"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
