<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundblack"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@mipmap/emailbg">

        <include layout="@layout/header" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/et_phone_modify"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/phone_email_modify"
                        android:paddingLeft="5dp"
                        android:paddingTop="15dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_get_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_stroke_green1"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp"
                        android:text="获取验证码"
                        android:textColor="@color/switch_text_select6"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_divider_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/selector_divider" />

                <com.zt.igreen.widget.CustomEditText
                    android:id="@+id/et_verify_modify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:customHint="@string/verify_hint"
                    app:drawablePadding="5dp"
                    app:paddingBottom="10dp"
                    app:paddingTop="10dp"
                    app:textSize="14sp" />

                <com.zt.igreen.widget.CustomEditText
                    android:id="@+id/et_phone_modify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:customHint="@string/phone_hint2"
                    app:drawablePadding="5dp"
                    app:paddingBottom="10dp"
                    app:paddingTop="10dp"
                    app:textSize="14sp" />

                <com.zt.igreen.widget.CustomEditText
                    android:id="@+id/et_phone2_modify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:customHint="@string/phone_hint3"
                    app:drawablePadding="5dp"
                    app:paddingBottom="10dp"
                    app:paddingTop="10dp"
                    app:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_confirm_modify_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:background="@drawable/shape_stroke_green"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
