<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_email_bind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingBottom="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="@string/email_hint"
                    android:paddingTop="15dp"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/selector_divider" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/btn_confirm_bind_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/shape_stroke_green"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>
