<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundblack"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <TextView
        android:id="@+id/tv_use_direct_lamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/more_derection"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_use_record_lamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/more_record"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white" />

    <TextView
        android:id="@+id/tv_share_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/more_share"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@mipmap/divider_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:text="资产编号"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/divider_white" />
</LinearLayout>
